Switch to centos/centos:stream9 image
Signed-off-by: Alexander Bokovoy <abokovoy@redhat.com>

--- a/.github/workflows/build-gh-pages.yml
+++ b/.github/workflows/build-gh-pages.yml
@@ -13,7 +13,7 @@ jobs:
     name: build pages
     runs-on: ubuntu-latest
     container:
-      image: centos/python-27-centos7
+      image: quay.io/centos/centos:stream9
       volumes:
         - ${{ github.workspace }}:/opt/app-root/src
 
